[package]
name = "blinc_portal_ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Immediate-mode widget toolkit for canvas closures. Drives widgets and free-form paint inside a CanvasKit element, with Blinc signal subscriptions for reactive state and host-side overlay escape for popovers / dropdowns / context menus."
repository = "https://github.com/project-blinc/blinc_portal_ui"
readme = "README.md"
documentation = "https://docs.rs/blinc_portal_ui"
rust-version = "1.75"
keywords = ["ui", "gui", "imgui", "canvas", "widgets"]
categories = ["gui"]

# Standalone package — `/packages/*` is gitignored and workspace-excluded.
# Mirrors blinc_canvas_kit / blinc_node_editor.

[lib]
crate-type = ["lib"]

[dependencies]
# Blinc upstreams — same pinned rev as blinc_canvas_kit / blinc_node_editor
# so all three unify in a consumer dep graph.
blinc_core      = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b80ad21e6abeed3a1eb4b62af1d8ad6a05" }
blinc_layout    = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b80ad21e6abeed3a1eb4b62af1d8ad6a05" }
blinc_theme     = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b80ad21e6abeed3a1eb4b62af1d8ad6a05" }
blinc_animation = { git = "https://github.com/project-blinc/Blinc.git", rev = "aa5ed9b80ad21e6abeed3a1eb4b62af1d8ad6a05" }

# Sibling crate — kit exposes `CanvasKit::hit_rect` + `InteractionState`
# we read each frame to compute Response.hovered / Response.pressed,
# plus the `add_click_listener` subscription that drives
# Response.clicked. Lives in its own repo
# (`github.com/project-blinc/blinc_canvas_kit`); the [patch] block
# below redirects to the colocated local checkout when developed
# source-local to a Blinc tree.
blinc_canvas_kit = { git = "https://github.com/project-blinc/blinc_canvas_kit.git", rev = "fddde0be63ab8c78c645582bed80aa08aa63886a" }

# Cross-target monotonic clock. Portal widgets ease hover / press over
# time using a per-portal wall clock; `web_time::Instant` is a re-export
# of `std::time::Instant` on native and wraps `performance.now()` on wasm.
web-time = "1.1"

# Stable hash for WidgetId derivation (hash chain through PortalId +
# id_stack + caller key). Non-cryptographic; cheap.
ahash = "0.8"

# Diagnostic logging. `tracing` is the workspace convention.
tracing = "0.1"

# Match the Blinc workspace pin — see blinc_node_editor/Cargo.toml for
# the wgpu-hal regression rationale.
wgpu-hal = "=26.0.5"

# ----- LOCAL DEVELOPMENT ONLY -----
# Redirect git-pinned upstreams to the local checkout while the crate is
# developed source-local to Blinc. Same pattern as blinc_node_editor.
[patch."https://github.com/project-blinc/Blinc.git"]
blinc_core      = { path = "../../crates/blinc_core" }
blinc_layout    = { path = "../../crates/blinc_layout" }
blinc_theme     = { path = "../../crates/blinc_theme" }
blinc_gpu       = { path = "../../crates/blinc_gpu" }
blinc_animation = { path = "../../crates/blinc_animation" }

# `blinc_canvas_kit` lives in its own repo now — redirect the git
# dep to the colocated checkout for source-local development.
[patch."https://github.com/project-blinc/blinc_canvas_kit.git"]
blinc_canvas_kit = { path = "../blinc_canvas_kit" }
